
#
#
#    Copyright (C) 2024 Universitat de València - UV
#    Copyright (C) 2024 Universitat Politècnica de València - UPV
#    Copyright (C) 2024 Vicent Giménez Alventosa
#
#    This file is part of PenRed: Parallel Engine for Radiation Energy Deposition.
#
#    PenRed is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    PenRed is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with PenRed.  If not, see <https://www.gnu.org/licenses/>. 
#
#
#    contact emails:
#
#        vicent.gimenez.alventosa@gmail.com
#    
#




##############################
#  PENELOPE MATERIAL DATABASE
##############################

# Create the program to create the data base
add_executable(penelope_material_db_creator ${CMAKE_CURRENT_SOURCE_DIR}/source/createDB.cpp)
target_link_libraries(penelope_material_db_creator commonDB)

# Create a list with the DB source files to be created
set(GENERATED_DB_FILENAMES
	eeldx001_p08.cpp
	eeldx002_p08.cpp
	eeldx003_p08.cpp
	eeldx004_p08.cpp
	eeldx005_p08.cpp
	eeldx006_p08.cpp
	eeldx007_p08.cpp
	eeldx008_p08.cpp
	eeldx009_p08.cpp
	eeldx010_p08.cpp
	eeldx011_p08.cpp
	eeldx012_p08.cpp
	eeldx013_p08.cpp
	eeldx014_p08.cpp
	eeldx015_p08.cpp
	eeldx016_p08.cpp
	eeldx017_p08.cpp
	eeldx018_p08.cpp
	eeldx019_p08.cpp
	eeldx020_p08.cpp
	eeldx021_p08.cpp
	eeldx022_p08.cpp
	eeldx023_p08.cpp
	eeldx024_p08.cpp
	eeldx025_p08.cpp
	eeldx026_p08.cpp
	eeldx027_p08.cpp
	eeldx028_p08.cpp
	eeldx029_p08.cpp
	eeldx030_p08.cpp
	eeldx031_p08.cpp
	eeldx032_p08.cpp
	eeldx033_p08.cpp
	eeldx034_p08.cpp
	eeldx035_p08.cpp
	eeldx036_p08.cpp
	eeldx037_p08.cpp
	eeldx038_p08.cpp
	eeldx039_p08.cpp
	eeldx040_p08.cpp
	eeldx041_p08.cpp
	eeldx042_p08.cpp
	eeldx043_p08.cpp
	eeldx044_p08.cpp
	eeldx045_p08.cpp
	eeldx046_p08.cpp
	eeldx047_p08.cpp
	eeldx048_p08.cpp
	eeldx049_p08.cpp
	eeldx050_p08.cpp
	eeldx051_p08.cpp
	eeldx052_p08.cpp
	eeldx053_p08.cpp
	eeldx054_p08.cpp
	eeldx055_p08.cpp
	eeldx056_p08.cpp
	eeldx057_p08.cpp
	eeldx058_p08.cpp
	eeldx059_p08.cpp
	eeldx060_p08.cpp
	eeldx061_p08.cpp
	eeldx062_p08.cpp
	eeldx063_p08.cpp
	eeldx064_p08.cpp
	eeldx065_p08.cpp
	eeldx066_p08.cpp
	eeldx067_p08.cpp
	eeldx068_p08.cpp
	eeldx069_p08.cpp
	eeldx070_p08.cpp
	eeldx071_p08.cpp
	eeldx072_p08.cpp
	eeldx073_p08.cpp
	eeldx074_p08.cpp
	eeldx075_p08.cpp
	eeldx076_p08.cpp
	eeldx077_p08.cpp
	eeldx078_p08.cpp
	eeldx079_p08.cpp
	eeldx080_p08.cpp
	eeldx081_p08.cpp
	eeldx082_p08.cpp
	eeldx083_p08.cpp
	eeldx084_p08.cpp
	eeldx085_p08.cpp
	eeldx086_p08.cpp
	eeldx087_p08.cpp
	eeldx088_p08.cpp
	eeldx089_p08.cpp
	eeldx090_p08.cpp
	eeldx091_p08.cpp
	eeldx092_p08.cpp
	eeldx093_p08.cpp
	eeldx094_p08.cpp
	eeldx095_p08.cpp
	eeldx096_p08.cpp
	eeldx097_p08.cpp
	eeldx098_p08.cpp
	eeldx099_p08.cpp
	pdaff01_p08.cpp
	pdaff02_p08.cpp
	pdaff03_p08.cpp
	pdaff04_p08.cpp
	pdaff05_p08.cpp
	pdaff06_p08.cpp
	pdaff07_p08.cpp
	pdaff08_p08.cpp
	pdaff09_p08.cpp
	pdaff10_p08.cpp
	pdaff11_p08.cpp
	pdaff12_p08.cpp
	pdaff13_p08.cpp
	pdaff14_p08.cpp
	pdaff15_p08.cpp
	pdaff16_p08.cpp
	pdaff17_p08.cpp
	pdaff18_p08.cpp
	pdaff19_p08.cpp
	pdaff20_p08.cpp
	pdaff21_p08.cpp
	pdaff22_p08.cpp
	pdaff23_p08.cpp
	pdaff24_p08.cpp
	pdaff25_p08.cpp
	pdaff26_p08.cpp
	pdaff27_p08.cpp
	pdaff28_p08.cpp
	pdaff29_p08.cpp
	pdaff30_p08.cpp
	pdaff31_p08.cpp
	pdaff32_p08.cpp
	pdaff33_p08.cpp
	pdaff34_p08.cpp
	pdaff35_p08.cpp
	pdaff36_p08.cpp
	pdaff37_p08.cpp
	pdaff38_p08.cpp
	pdaff39_p08.cpp
	pdaff40_p08.cpp
	pdaff41_p08.cpp
	pdaff42_p08.cpp
	pdaff43_p08.cpp
	pdaff44_p08.cpp
	pdaff45_p08.cpp
	pdaff46_p08.cpp
	pdaff47_p08.cpp
	pdaff48_p08.cpp
	pdaff49_p08.cpp
	pdaff50_p08.cpp
	pdaff51_p08.cpp
	pdaff52_p08.cpp
	pdaff53_p08.cpp
	pdaff54_p08.cpp
	pdaff55_p08.cpp
	pdaff56_p08.cpp
	pdaff57_p08.cpp
	pdaff58_p08.cpp
	pdaff59_p08.cpp
	pdaff60_p08.cpp
	pdaff61_p08.cpp
	pdaff62_p08.cpp
	pdaff63_p08.cpp
	pdaff64_p08.cpp
	pdaff65_p08.cpp
	pdaff66_p08.cpp
	pdaff67_p08.cpp
	pdaff68_p08.cpp
	pdaff69_p08.cpp
	pdaff70_p08.cpp
	pdaff71_p08.cpp
	pdaff72_p08.cpp
	pdaff73_p08.cpp
	pdaff74_p08.cpp
	pdaff75_p08.cpp
	pdaff76_p08.cpp
	pdaff77_p08.cpp
	pdaff78_p08.cpp
	pdaff79_p08.cpp
	pdaff80_p08.cpp
	pdaff81_p08.cpp
	pdaff82_p08.cpp
	pdaff83_p08.cpp
	pdaff84_p08.cpp
	pdaff85_p08.cpp
	pdaff86_p08.cpp
	pdaff87_p08.cpp
	pdaff88_p08.cpp
	pdaff89_p08.cpp
	pdaff90_p08.cpp
	pdaff91_p08.cpp
	pdaff92_p08.cpp
	pdaff93_p08.cpp
	pdaff94_p08.cpp
	pdaff95_p08.cpp
	pdaff96_p08.cpp
	pdaff97_p08.cpp
	pdaff98_p08.cpp
	pdaff99_p08.cpp
	pdatconf_p14.cpp
	pdbrang_p18.cpp
	pdcompos_pen.cpp
	pdebr01_p08.cpp
	pdebr02_p08.cpp
	pdebr03_p08.cpp
	pdebr04_p08.cpp
	pdebr05_p08.cpp
	pdebr06_p08.cpp
	pdebr07_p08.cpp
	pdebr08_p08.cpp
	pdebr09_p08.cpp
	pdebr10_p08.cpp
	pdebr11_p08.cpp
	pdebr12_p08.cpp
	pdebr13_p08.cpp
	pdebr14_p08.cpp
	pdebr15_p08.cpp
	pdebr16_p08.cpp
	pdebr17_p08.cpp
	pdebr18_p08.cpp
	pdebr19_p08.cpp
	pdebr20_p08.cpp
	pdebr21_p08.cpp
	pdebr22_p08.cpp
	pdebr23_p08.cpp
	pdebr24_p08.cpp
	pdebr25_p08.cpp
	pdebr26_p08.cpp
	pdebr27_p08.cpp
	pdebr28_p08.cpp
	pdebr29_p08.cpp
	pdebr30_p08.cpp
	pdebr31_p08.cpp
	pdebr32_p08.cpp
	pdebr33_p08.cpp
	pdebr34_p08.cpp
	pdebr35_p08.cpp
	pdebr36_p08.cpp
	pdebr37_p08.cpp
	pdebr38_p08.cpp
	pdebr39_p08.cpp
	pdebr40_p08.cpp
	pdebr41_p08.cpp
	pdebr42_p08.cpp
	pdebr43_p08.cpp
	pdebr44_p08.cpp
	pdebr45_p08.cpp
	pdebr46_p08.cpp
	pdebr47_p08.cpp
	pdebr48_p08.cpp
	pdebr49_p08.cpp
	pdebr50_p08.cpp
	pdebr51_p08.cpp
	pdebr52_p08.cpp
	pdebr53_p08.cpp
	pdebr54_p08.cpp
	pdebr55_p08.cpp
	pdebr56_p08.cpp
	pdebr57_p08.cpp
	pdebr58_p08.cpp
	pdebr59_p08.cpp
	pdebr60_p08.cpp
	pdebr61_p08.cpp
	pdebr62_p08.cpp
	pdebr63_p08.cpp
	pdebr64_p08.cpp
	pdebr65_p08.cpp
	pdebr66_p08.cpp
	pdebr67_p08.cpp
	pdebr68_p08.cpp
	pdebr69_p08.cpp
	pdebr70_p08.cpp
	pdebr71_p08.cpp
	pdebr72_p08.cpp
	pdebr73_p08.cpp
	pdebr74_p08.cpp
	pdebr75_p08.cpp
	pdebr76_p08.cpp
	pdebr77_p08.cpp
	pdebr78_p08.cpp
	pdebr79_p08.cpp
	pdebr80_p08.cpp
	pdebr81_p08.cpp
	pdebr82_p08.cpp
	pdebr83_p08.cpp
	pdebr84_p08.cpp
	pdebr85_p08.cpp
	pdebr86_p08.cpp
	pdebr87_p08.cpp
	pdebr88_p08.cpp
	pdebr89_p08.cpp
	pdebr90_p08.cpp
	pdebr91_p08.cpp
	pdebr92_p08.cpp
	pdebr93_p08.cpp
	pdebr94_p08.cpp
	pdebr95_p08.cpp
	pdebr96_p08.cpp
	pdebr97_p08.cpp
	pdebr98_p08.cpp
	pdebr99_p08.cpp
	pdeel01_p08.cpp
	pdeel02_p08.cpp
	pdeel03_p08.cpp
	pdeel04_p08.cpp
	pdeel05_p08.cpp
	pdeel06_p08.cpp
	pdeel07_p08.cpp
	pdeel08_p08.cpp
	pdeel09_p08.cpp
	pdeel10_p08.cpp
	pdeel11_p08.cpp
	pdeel12_p08.cpp
	pdeel13_p08.cpp
	pdeel14_p08.cpp
	pdeel15_p08.cpp
	pdeel16_p08.cpp
	pdeel17_p08.cpp
	pdeel18_p08.cpp
	pdeel19_p08.cpp
	pdeel20_p08.cpp
	pdeel21_p08.cpp
	pdeel22_p08.cpp
	pdeel23_p08.cpp
	pdeel24_p08.cpp
	pdeel25_p08.cpp
	pdeel26_p08.cpp
	pdeel27_p08.cpp
	pdeel28_p08.cpp
	pdeel29_p08.cpp
	pdeel30_p08.cpp
	pdeel31_p08.cpp
	pdeel32_p08.cpp
	pdeel33_p08.cpp
	pdeel34_p08.cpp
	pdeel35_p08.cpp
	pdeel36_p08.cpp
	pdeel37_p08.cpp
	pdeel38_p08.cpp
	pdeel39_p08.cpp
	pdeel40_p08.cpp
	pdeel41_p08.cpp
	pdeel42_p08.cpp
	pdeel43_p08.cpp
	pdeel44_p08.cpp
	pdeel45_p08.cpp
	pdeel46_p08.cpp
	pdeel47_p08.cpp
	pdeel48_p08.cpp
	pdeel49_p08.cpp
	pdeel50_p08.cpp
	pdeel51_p08.cpp
	pdeel52_p08.cpp
	pdeel53_p08.cpp
	pdeel54_p08.cpp
	pdeel55_p08.cpp
	pdeel56_p08.cpp
	pdeel57_p08.cpp
	pdeel58_p08.cpp
	pdeel59_p08.cpp
	pdeel60_p08.cpp
	pdeel61_p08.cpp
	pdeel62_p08.cpp
	pdeel63_p08.cpp
	pdeel64_p08.cpp
	pdeel65_p08.cpp
	pdeel66_p08.cpp
	pdeel67_p08.cpp
	pdeel68_p08.cpp
	pdeel69_p08.cpp
	pdeel70_p08.cpp
	pdeel71_p08.cpp
	pdeel72_p08.cpp
	pdeel73_p08.cpp
	pdeel74_p08.cpp
	pdeel75_p08.cpp
	pdeel76_p08.cpp
	pdeel77_p08.cpp
	pdeel78_p08.cpp
	pdeel79_p08.cpp
	pdeel80_p08.cpp
	pdeel81_p08.cpp
	pdeel82_p08.cpp
	pdeel83_p08.cpp
	pdeel84_p08.cpp
	pdeel85_p08.cpp
	pdeel86_p08.cpp
	pdeel87_p08.cpp
	pdeel88_p08.cpp
	pdeel89_p08.cpp
	pdeel90_p08.cpp
	pdeel91_p08.cpp
	pdeel92_p08.cpp
	pdeel93_p08.cpp
	pdeel94_p08.cpp
	pdeel95_p08.cpp
	pdeel96_p08.cpp
	pdeel97_p08.cpp
	pdeel98_p08.cpp
	pdeel99_p08.cpp
	pdesi01_p14.cpp
	pdesi02_p14.cpp
	pdesi03_p14.cpp
	pdesi04_p14.cpp
	pdesi05_p14.cpp
	pdesi06_p14.cpp
	pdesi07_p14.cpp
	pdesi08_p14.cpp
	pdesi09_p14.cpp
	pdesi10_p14.cpp
	pdesi11_p14.cpp
	pdesi12_p14.cpp
	pdesi13_p14.cpp
	pdesi14_p14.cpp
	pdesi15_p14.cpp
	pdesi16_p14.cpp
	pdesi17_p14.cpp
	pdesi18_p14.cpp
	pdesi19_p14.cpp
	pdesi20_p14.cpp
	pdesi21_p14.cpp
	pdesi22_p14.cpp
	pdesi23_p14.cpp
	pdesi24_p14.cpp
	pdesi25_p14.cpp
	pdesi26_p14.cpp
	pdesi27_p14.cpp
	pdesi28_p14.cpp
	pdesi29_p14.cpp
	pdesi30_p14.cpp
	pdesi31_p14.cpp
	pdesi32_p14.cpp
	pdesi33_p14.cpp
	pdesi34_p14.cpp
	pdesi35_p14.cpp
	pdesi36_p14.cpp
	pdesi37_p14.cpp
	pdesi38_p14.cpp
	pdesi39_p14.cpp
	pdesi40_p14.cpp
	pdesi41_p14.cpp
	pdesi42_p14.cpp
	pdesi43_p14.cpp
	pdesi44_p14.cpp
	pdesi45_p14.cpp
	pdesi46_p14.cpp
	pdesi47_p14.cpp
	pdesi48_p14.cpp
	pdesi49_p14.cpp
	pdesi50_p14.cpp
	pdesi51_p14.cpp
	pdesi52_p14.cpp
	pdesi53_p14.cpp
	pdesi54_p14.cpp
	pdesi55_p14.cpp
	pdesi56_p14.cpp
	pdesi57_p14.cpp
	pdesi58_p14.cpp
	pdesi59_p14.cpp
	pdesi60_p14.cpp
	pdesi61_p14.cpp
	pdesi62_p14.cpp
	pdesi63_p14.cpp
	pdesi64_p14.cpp
	pdesi65_p14.cpp
	pdesi66_p14.cpp
	pdesi67_p14.cpp
	pdesi68_p14.cpp
	pdesi69_p14.cpp
	pdesi70_p14.cpp
	pdesi71_p14.cpp
	pdesi72_p14.cpp
	pdesi73_p14.cpp
	pdesi74_p14.cpp
	pdesi75_p14.cpp
	pdesi76_p14.cpp
	pdesi77_p14.cpp
	pdesi78_p14.cpp
	pdesi79_p14.cpp
	pdesi80_p14.cpp
	pdesi81_p14.cpp
	pdesi82_p14.cpp
	pdesi83_p14.cpp
	pdesi84_p14.cpp
	pdesi85_p14.cpp
	pdesi86_p14.cpp
	pdesi87_p14.cpp
	pdesi88_p14.cpp
	pdesi89_p14.cpp
	pdesi90_p14.cpp
	pdesi91_p14.cpp
	pdesi92_p14.cpp
	pdesi93_p14.cpp
	pdesi94_p14.cpp
	pdesi95_p14.cpp
	pdesi96_p14.cpp
	pdesi97_p14.cpp
	pdesi98_p14.cpp
	pdesi99_p14.cpp
	pdgph01_p18.cpp
	pdgph02_p18.cpp
	pdgph03_p18.cpp
	pdgph04_p18.cpp
	pdgph05_p18.cpp
	pdgph06_p18.cpp
	pdgph07_p18.cpp
	pdgph08_p18.cpp
	pdgph09_p18.cpp
	pdgph10_p18.cpp
	pdgph11_p18.cpp
	pdgph12_p18.cpp
	pdgph13_p18.cpp
	pdgph14_p18.cpp
	pdgph15_p18.cpp
	pdgph16_p18.cpp
	pdgph17_p18.cpp
	pdgph18_p18.cpp
	pdgph19_p18.cpp
	pdgph20_p18.cpp
	pdgph21_p18.cpp
	pdgph22_p18.cpp
	pdgph23_p18.cpp
	pdgph24_p18.cpp
	pdgph25_p18.cpp
	pdgph26_p18.cpp
	pdgph27_p18.cpp
	pdgph28_p18.cpp
	pdgph29_p18.cpp
	pdgph30_p18.cpp
	pdgph31_p18.cpp
	pdgph32_p18.cpp
	pdgph33_p18.cpp
	pdgph34_p18.cpp
	pdgph35_p18.cpp
	pdgph36_p18.cpp
	pdgph37_p18.cpp
	pdgph38_p18.cpp
	pdgph39_p18.cpp
	pdgph40_p18.cpp
	pdgph41_p18.cpp
	pdgph42_p18.cpp
	pdgph43_p18.cpp
	pdgph44_p18.cpp
	pdgph45_p18.cpp
	pdgph46_p18.cpp
	pdgph47_p18.cpp
	pdgph48_p18.cpp
	pdgph49_p18.cpp
	pdgph50_p18.cpp
	pdgph51_p18.cpp
	pdgph52_p18.cpp
	pdgph53_p18.cpp
	pdgph54_p18.cpp
	pdgph55_p18.cpp
	pdgph56_p18.cpp
	pdgph57_p18.cpp
	pdgph58_p18.cpp
	pdgph59_p18.cpp
	pdgph60_p18.cpp
	pdgph61_p18.cpp
	pdgph62_p18.cpp
	pdgph63_p18.cpp
	pdgph64_p18.cpp
	pdgph65_p18.cpp
	pdgph66_p18.cpp
	pdgph67_p18.cpp
	pdgph68_p18.cpp
	pdgph69_p18.cpp
	pdgph70_p18.cpp
	pdgph71_p18.cpp
	pdgph72_p18.cpp
	pdgph73_p18.cpp
	pdgph74_p18.cpp
	pdgph75_p18.cpp
	pdgph76_p18.cpp
	pdgph77_p18.cpp
	pdgph78_p18.cpp
	pdgph79_p18.cpp
	pdgph80_p18.cpp
	pdgph81_p18.cpp
	pdgph82_p18.cpp
	pdgph83_p18.cpp
	pdgph84_p18.cpp
	pdgph85_p18.cpp
	pdgph86_p18.cpp
	pdgph87_p18.cpp
	pdgph88_p18.cpp
	pdgph89_p18.cpp
	pdgph90_p18.cpp
	pdgph91_p18.cpp
	pdgph92_p18.cpp
	pdgph93_p18.cpp
	pdgph94_p18.cpp
	pdgph95_p18.cpp
	pdgph96_p18.cpp
	pdgph97_p18.cpp
	pdgph98_p18.cpp
	pdgph99_p18.cpp
	pdgpp01_p11.cpp
	pdgpp02_p11.cpp
	pdgpp03_p11.cpp
	pdgpp04_p11.cpp
	pdgpp05_p11.cpp
	pdgpp06_p11.cpp
	pdgpp07_p11.cpp
	pdgpp08_p11.cpp
	pdgpp09_p11.cpp
	pdgpp10_p11.cpp
	pdgpp11_p11.cpp
	pdgpp12_p11.cpp
	pdgpp13_p11.cpp
	pdgpp14_p11.cpp
	pdgpp15_p11.cpp
	pdgpp16_p11.cpp
	pdgpp17_p11.cpp
	pdgpp18_p11.cpp
	pdgpp19_p11.cpp
	pdgpp20_p11.cpp
	pdgpp21_p11.cpp
	pdgpp22_p11.cpp
	pdgpp23_p11.cpp
	pdgpp24_p11.cpp
	pdgpp25_p11.cpp
	pdgpp26_p11.cpp
	pdgpp27_p11.cpp
	pdgpp28_p11.cpp
	pdgpp29_p11.cpp
	pdgpp30_p11.cpp
	pdgpp31_p11.cpp
	pdgpp32_p11.cpp
	pdgpp33_p11.cpp
	pdgpp34_p11.cpp
	pdgpp35_p11.cpp
	pdgpp36_p11.cpp
	pdgpp37_p11.cpp
	pdgpp38_p11.cpp
	pdgpp39_p11.cpp
	pdgpp40_p11.cpp
	pdgpp41_p11.cpp
	pdgpp42_p11.cpp
	pdgpp43_p11.cpp
	pdgpp44_p11.cpp
	pdgpp45_p11.cpp
	pdgpp46_p11.cpp
	pdgpp47_p11.cpp
	pdgpp48_p11.cpp
	pdgpp49_p11.cpp
	pdgpp50_p11.cpp
	pdgpp51_p11.cpp
	pdgpp52_p11.cpp
	pdgpp53_p11.cpp
	pdgpp54_p11.cpp
	pdgpp55_p11.cpp
	pdgpp56_p11.cpp
	pdgpp57_p11.cpp
	pdgpp58_p11.cpp
	pdgpp59_p11.cpp
	pdgpp60_p11.cpp
	pdgpp61_p11.cpp
	pdgpp62_p11.cpp
	pdgpp63_p11.cpp
	pdgpp64_p11.cpp
	pdgpp65_p11.cpp
	pdgpp66_p11.cpp
	pdgpp67_p11.cpp
	pdgpp68_p11.cpp
	pdgpp69_p11.cpp
	pdgpp70_p11.cpp
	pdgpp71_p11.cpp
	pdgpp72_p11.cpp
	pdgpp73_p11.cpp
	pdgpp74_p11.cpp
	pdgpp75_p11.cpp
	pdgpp76_p11.cpp
	pdgpp77_p11.cpp
	pdgpp78_p11.cpp
	pdgpp79_p11.cpp
	pdgpp80_p11.cpp
	pdgpp81_p11.cpp
	pdgpp82_p11.cpp
	pdgpp83_p11.cpp
	pdgpp84_p11.cpp
	pdgpp85_p11.cpp
	pdgpp86_p11.cpp
	pdgpp87_p11.cpp
	pdgpp88_p11.cpp
	pdgpp89_p11.cpp
	pdgpp90_p11.cpp
	pdgpp91_p11.cpp
	pdgpp92_p11.cpp
	pdgpp93_p11.cpp
	pdgpp94_p11.cpp
	pdgpp95_p11.cpp
	pdgpp96_p11.cpp
	pdgpp97_p11.cpp
	pdgpp98_p11.cpp
	pdgpp99_p11.cpp
	pdgra01_p08.cpp
	pdgra02_p08.cpp
	pdgra03_p08.cpp
	pdgra04_p08.cpp
	pdgra05_p08.cpp
	pdgra06_p08.cpp
	pdgra07_p08.cpp
	pdgra08_p08.cpp
	pdgra09_p08.cpp
	pdgra10_p08.cpp
	pdgra11_p08.cpp
	pdgra12_p08.cpp
	pdgra13_p08.cpp
	pdgra14_p08.cpp
	pdgra15_p08.cpp
	pdgra16_p08.cpp
	pdgra17_p08.cpp
	pdgra18_p08.cpp
	pdgra19_p08.cpp
	pdgra20_p08.cpp
	pdgra21_p08.cpp
	pdgra22_p08.cpp
	pdgra23_p08.cpp
	pdgra24_p08.cpp
	pdgra25_p08.cpp
	pdgra26_p08.cpp
	pdgra27_p08.cpp
	pdgra28_p08.cpp
	pdgra29_p08.cpp
	pdgra30_p08.cpp
	pdgra31_p08.cpp
	pdgra32_p08.cpp
	pdgra33_p08.cpp
	pdgra34_p08.cpp
	pdgra35_p08.cpp
	pdgra36_p08.cpp
	pdgra37_p08.cpp
	pdgra38_p08.cpp
	pdgra39_p08.cpp
	pdgra40_p08.cpp
	pdgra41_p08.cpp
	pdgra42_p08.cpp
	pdgra43_p08.cpp
	pdgra44_p08.cpp
	pdgra45_p08.cpp
	pdgra46_p08.cpp
	pdgra47_p08.cpp
	pdgra48_p08.cpp
	pdgra49_p08.cpp
	pdgra50_p08.cpp
	pdgra51_p08.cpp
	pdgra52_p08.cpp
	pdgra53_p08.cpp
	pdgra54_p08.cpp
	pdgra55_p08.cpp
	pdgra56_p08.cpp
	pdgra57_p08.cpp
	pdgra58_p08.cpp
	pdgra59_p08.cpp
	pdgra60_p08.cpp
	pdgra61_p08.cpp
	pdgra62_p08.cpp
	pdgra63_p08.cpp
	pdgra64_p08.cpp
	pdgra65_p08.cpp
	pdgra66_p08.cpp
	pdgra67_p08.cpp
	pdgra68_p08.cpp
	pdgra69_p08.cpp
	pdgra70_p08.cpp
	pdgra71_p08.cpp
	pdgra72_p08.cpp
	pdgra73_p08.cpp
	pdgra74_p08.cpp
	pdgra75_p08.cpp
	pdgra76_p08.cpp
	pdgra77_p08.cpp
	pdgra78_p08.cpp
	pdgra79_p08.cpp
	pdgra80_p08.cpp
	pdgra81_p08.cpp
	pdgra82_p08.cpp
	pdgra83_p08.cpp
	pdgra84_p08.cpp
	pdgra85_p08.cpp
	pdgra86_p08.cpp
	pdgra87_p08.cpp
	pdgra88_p08.cpp
	pdgra89_p08.cpp
	pdgra90_p08.cpp
	pdgra91_p08.cpp
	pdgra92_p08.cpp
	pdgra93_p08.cpp
	pdgra94_p08.cpp
	pdgra95_p08.cpp
	pdgra96_p08.cpp
	pdgra97_p08.cpp
	pdgra98_p08.cpp
	pdgra99_p08.cpp
	pdpsi01_p14.cpp
	pdpsi02_p14.cpp
	pdpsi03_p14.cpp
	pdpsi04_p14.cpp
	pdpsi05_p14.cpp
	pdpsi06_p14.cpp
	pdpsi07_p14.cpp
	pdpsi08_p14.cpp
	pdpsi09_p14.cpp
	pdpsi10_p14.cpp
	pdpsi11_p14.cpp
	pdpsi12_p14.cpp
	pdpsi13_p14.cpp
	pdpsi14_p14.cpp
	pdpsi15_p14.cpp
	pdpsi16_p14.cpp
	pdpsi17_p14.cpp
	pdpsi18_p14.cpp
	pdpsi19_p14.cpp
	pdpsi20_p14.cpp
	pdpsi21_p14.cpp
	pdpsi22_p14.cpp
	pdpsi23_p14.cpp
	pdpsi24_p14.cpp
	pdpsi25_p14.cpp
	pdpsi26_p14.cpp
	pdpsi27_p14.cpp
	pdpsi28_p14.cpp
	pdpsi29_p14.cpp
	pdpsi30_p14.cpp
	pdpsi31_p14.cpp
	pdpsi32_p14.cpp
	pdpsi33_p14.cpp
	pdpsi34_p14.cpp
	pdpsi35_p14.cpp
	pdpsi36_p14.cpp
	pdpsi37_p14.cpp
	pdpsi38_p14.cpp
	pdpsi39_p14.cpp
	pdpsi40_p14.cpp
	pdpsi41_p14.cpp
	pdpsi42_p14.cpp
	pdpsi43_p14.cpp
	pdpsi44_p14.cpp
	pdpsi45_p14.cpp
	pdpsi46_p14.cpp
	pdpsi47_p14.cpp
	pdpsi48_p14.cpp
	pdpsi49_p14.cpp
	pdpsi50_p14.cpp
	pdpsi51_p14.cpp
	pdpsi52_p14.cpp
	pdpsi53_p14.cpp
	pdpsi54_p14.cpp
	pdpsi55_p14.cpp
	pdpsi56_p14.cpp
	pdpsi57_p14.cpp
	pdpsi58_p14.cpp
	pdpsi59_p14.cpp
	pdpsi60_p14.cpp
	pdpsi61_p14.cpp
	pdpsi62_p14.cpp
	pdpsi63_p14.cpp
	pdpsi64_p14.cpp
	pdpsi65_p14.cpp
	pdpsi66_p14.cpp
	pdpsi67_p14.cpp
	pdpsi68_p14.cpp
	pdpsi69_p14.cpp
	pdpsi70_p14.cpp
	pdpsi71_p14.cpp
	pdpsi72_p14.cpp
	pdpsi73_p14.cpp
	pdpsi74_p14.cpp
	pdpsi75_p14.cpp
	pdpsi76_p14.cpp
	pdpsi77_p14.cpp
	pdpsi78_p14.cpp
	pdpsi79_p14.cpp
	pdpsi80_p14.cpp
	pdpsi81_p14.cpp
	pdpsi82_p14.cpp
	pdpsi83_p14.cpp
	pdpsi84_p14.cpp
	pdpsi85_p14.cpp
	pdpsi86_p14.cpp
	pdpsi87_p14.cpp
	pdpsi88_p14.cpp
	pdpsi89_p14.cpp
	pdpsi90_p14.cpp
	pdpsi91_p14.cpp
	pdpsi92_p14.cpp
	pdpsi93_p14.cpp
	pdpsi94_p14.cpp
	pdpsi95_p14.cpp
	pdpsi96_p14.cpp
	pdpsi97_p14.cpp
	pdpsi98_p14.cpp
	pdpsi99_p14.cpp
	pdrelax_p11.cpp
	peldx001_p08.cpp
	peldx002_p08.cpp
	peldx003_p08.cpp
	peldx004_p08.cpp
	peldx005_p08.cpp
	peldx006_p08.cpp
	peldx007_p08.cpp
	peldx008_p08.cpp
	peldx009_p08.cpp
	peldx010_p08.cpp
	peldx011_p08.cpp
	peldx012_p08.cpp
	peldx013_p08.cpp
	peldx014_p08.cpp
	peldx015_p08.cpp
	peldx016_p08.cpp
	peldx017_p08.cpp
	peldx018_p08.cpp
	peldx019_p08.cpp
	peldx020_p08.cpp
	peldx021_p08.cpp
	peldx022_p08.cpp
	peldx023_p08.cpp
	peldx024_p08.cpp
	peldx025_p08.cpp
	peldx026_p08.cpp
	peldx027_p08.cpp
	peldx028_p08.cpp
	peldx029_p08.cpp
	peldx030_p08.cpp
	peldx031_p08.cpp
	peldx032_p08.cpp
	peldx033_p08.cpp
	peldx034_p08.cpp
	peldx035_p08.cpp
	peldx036_p08.cpp
	peldx037_p08.cpp
	peldx038_p08.cpp
	peldx039_p08.cpp
	peldx040_p08.cpp
	peldx041_p08.cpp
	peldx042_p08.cpp
	peldx043_p08.cpp
	peldx044_p08.cpp
	peldx045_p08.cpp
	peldx046_p08.cpp
	peldx047_p08.cpp
	peldx048_p08.cpp
	peldx049_p08.cpp
	peldx050_p08.cpp
	peldx051_p08.cpp
	peldx052_p08.cpp
	peldx053_p08.cpp
	peldx054_p08.cpp
	peldx055_p08.cpp
	peldx056_p08.cpp
	peldx057_p08.cpp
	peldx058_p08.cpp
	peldx059_p08.cpp
	peldx060_p08.cpp
	peldx061_p08.cpp
	peldx062_p08.cpp
	peldx063_p08.cpp
	peldx064_p08.cpp
	peldx065_p08.cpp
	peldx066_p08.cpp
	peldx067_p08.cpp
	peldx068_p08.cpp
	peldx069_p08.cpp
	peldx070_p08.cpp
	peldx071_p08.cpp
	peldx072_p08.cpp
	peldx073_p08.cpp
	peldx074_p08.cpp
	peldx075_p08.cpp
	peldx076_p08.cpp
	peldx077_p08.cpp
	peldx078_p08.cpp
	peldx079_p08.cpp
	peldx080_p08.cpp
	peldx081_p08.cpp
	peldx082_p08.cpp
	peldx083_p08.cpp
	peldx084_p08.cpp
	peldx085_p08.cpp
	peldx086_p08.cpp
	peldx087_p08.cpp
	peldx088_p08.cpp
	peldx089_p08.cpp
	peldx090_p08.cpp
	peldx091_p08.cpp
	peldx092_p08.cpp
	peldx093_p08.cpp
	peldx094_p08.cpp
	peldx095_p08.cpp
	peldx096_p08.cpp
	peldx097_p08.cpp
	peldx098_p08.cpp
	peldx099_p08.cpp)

# Create a list with the whole path to all generated source files
set(GENERATED_DB_FILES)
foreach(file ${GENERATED_DB_FILENAMES})
    list(APPEND GENERATED_DB_FILES ${CMAKE_CURRENT_BINARY_DIR}/database/${file})
endforeach()

# Create a custom target to tell CMake these files will be created when needed.
add_custom_target(
	GenerateSourcesDB
	DEPENDS ${GENERATED_DB_FILES}
)

# Create a directory to store the generated database
add_custom_target(makeDirDB ALL COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/database)

# Run the DB creator if needed
add_custom_command(
	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/database/database.hh ${GENERATED_DB_FILES}
	COMMAND penelope_material_db_creator ${PROJECT_SOURCE_DIR}/../dataBases/penmaterials/filesInDB.txt ${PROJECT_SOURCE_DIR}/../dataBases/penmaterials/pdfiles ${CMAKE_CURRENT_BINARY_DIR}/database
	DEPENDS penelope_material_db_creator
	DEPENDS makeDirDB
	COMMENT "Generating embedded data base"
)
#add_custom_target(genDB DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/databse/database.hh)

# Create lib
#message(STATUS "Database files: ${GENERATED_DB_FILES}")
add_library(penelope_material_db STATIC ${CMAKE_CURRENT_SOURCE_DIR}/source/materialCreator.cpp ${GENERATED_DB_FILES} ${CMAKE_CURRENT_BINARY_DIR}/database/database.hh)

target_link_libraries(penelope_material_db commonDB)
target_link_libraries(penelope_material_db pen_compositionsDB)
target_include_directories(penelope_material_db PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/includes)
target_include_directories(penelope_material_db PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/database)

# Set dependencies with files to be generated
add_dependencies(penelope_material_db GenerateSourcesDB)
